--- a/src/style/globals.scss
+++ b/src/style/globals.scss
@@ -15,6 +15,15 @@
   }
 }
 
+// * don't allow image drag
+img {
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -o-user-select: none;
+  user-select: none;
+}
+
 main {
   background: linear-gradient(
     0deg,
